# travis-coredump

./: .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  might_crash.cpp
